# AP_LFS_InSim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  rutas_grabadas.txt  te.amo.py
.githooks/: pre-commit
config/: settings.py
docs/: OutSimPack.txt
docs/tutorial/: ISP_ACR.md  ISP_AIC.md  ISP_AII.md  ISP_AXI.md  ISP_AXM.md  ISP_BFN.md  ISP_BTC.md  ISP_BTN.md  ISP_BTT.md  ISP_CCH.md  ISP_CIM.md  ISP_CNL.md  ISP_CPP.md  ISP_CPR.md  ISP_CSC.md  ISP_FIN.md  ISP_FLG.md  ISP_HCP.md  ISP_HLV.md  ISP_III.md  ISP_ISI.md  ISP_ISM.md  ISP_JRR.md  ISP_LAP.md  ISP_MCI.md  ISP_MOD.md  ISP_MSL.md  ISP_MSO.md  ISP_MSX.md  ISP_MTC.md  ISP_NCI.md  ISP_NCN.md  ISP_NPL.md  ISP_OBH.md  ISP_OCO.md  ISP_PEN.md  ISP_PFL.md  ISP_PIT.md  ISP_PLA.md  ISP_PLC.md  (+19 more)
insims/ai_control/: __init__.py  app.py  base.py  behavior.py  commands.py  insim.json  map_ui.py  navigation.py  physics.py  traffic.py
insims/prueba_botones/: __init__.py  insim.json  main.py
insims/test_insim/: __init__.py  _cmds_request.py  _cmds_send.py  _handlers_event.py  insim.json  main.py
insims/users_management/: README.md  __init__.py  insim.json  main.py  um_class.py
scripts/: install-git-hooks.ps1  install-git-hooks.sh
src/lfs_insim/: __init__.py  cli.py  configuration.py  exceptions.py  generate_stubs.py  insim_app.py  (+14 more)
src/lfs_insim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_active_packet_registry.py  test_exceptions.py  test_insim_state.py  test_packet_base.py  test_utils.py  test_version.py
tools/: setup_lfs.py  update_insims_readme.py
(+56 files in other folders)
